fix: added back endsAt application logic
